--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="cra-boilerplate" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <title>Create React App</title>
+    <title>HANDSOF</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
